feat: code cleanup