@@ -1,10 +1,7 @@
 package fun.ogtimes.skywars.spigot.config;
 
 import java.io.*;
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.LinkedHashMap;
-import java.util.List;
+import java.util.*;
 import java.util.logging.Level;
 
 import lombok.Getter;
@@ -13,7 +10,7 @@ import org.bukkit.configuration.InvalidConfigurationException;
 import org.bukkit.configuration.file.YamlConfiguration;
 
 public class SkyConfiguration extends YamlConfiguration implements IConfiguration {
-    private EConfiguration econfig = new EConfiguration();
+    private final EConfiguration econfig = new EConfiguration();
     @Getter
     private File file;
 
@@ -57,7 +54,7 @@ public class SkyConfiguration extends YamlConfiguration implements IConfiguratio
         if (var3.isEmpty()) {
             Bukkit.getLogger().log(Level.SEVERE, var1.getName() + " doesn't have nothing to load");
         } else {
-            boolean var13 = !this.econfig.trim((String)var3.get(0)).isEmpty();
+            boolean var13 = !this.econfig.trim((String)var3.getFirst()).isEmpty();
             LinkedHashMap var5 = new LinkedHashMap();
 
             for(int var6 = 0; var6 < var3.size(); ++var6) {
@@ -66,9 +63,9 @@ public class SkyConfiguration extends YamlConfiguration implements IConfiguratio
                 if (var8.startsWith("#") && (var6 > 0 || !var13)) {
                     String var9 = this.econfig.getPathToComment(var3, var6, var7);
                     if (var9 != null) {
-                        Object var10 = (List)var5.get(var9);
+                        Object var10 = var5.get(var9);
                         if (var10 == null) {
-                            var10 = new ArrayList();
+                            var10 = new ArrayList<>();
                         }
 
                         ((List)var10).add(var8.substring(var8.startsWith("# ") ? 2 : 1));
@@ -92,51 +89,40 @@ public class SkyConfiguration extends YamlConfiguration implements IConfiguratio
     public void save(File var1) throws IOException {
         super.save(var1);
         ArrayList var2 = new ArrayList();
-        BufferedReader var3 = null;
 
-        try {
-            var3 = new BufferedReader(new FileReader(var1));
+        try (BufferedReader var3 = new BufferedReader(new FileReader(var1))) {
 
             String var4;
-            while((var4 = var3.readLine()) != null) {
+            while ((var4 = var3.readLine()) != null) {
                 var2.add(var4);
             }
-        } finally {
-            if (var3 != null) {
-                var3.close();
-            }
-
         }
 
-        BufferedWriter var20 = null;
-
-        try {
-            var20 = new BufferedWriter(new FileWriter(var1));
+        try (BufferedWriter var20 = new BufferedWriter(new FileWriter(var1))) {
             var20.write("");
 
-            for(int var5 = 0; var5 < var2.size(); ++var5) {
-                String var6 = (String)var2.get(var5);
+            for (int var5 = 0; var5 < var2.size(); ++var5) {
+                String var6 = (String) var2.get(var5);
                 String var7 = null;
                 if (!var6.startsWith("#") && var6.contains(":")) {
                     var7 = this.econfig.getPathToKey(var2, var5, var6);
                 }
 
-                String var9;
+                StringBuilder var9;
                 if (var7 != null && this.econfig.getComments().containsKey(var7)) {
                     int var8 = this.econfig.getPrefixSpaceCount(var6);
-                    var9 = "";
+                    var9 = new StringBuilder();
 
-                    for(int var10 = 0; var10 < var8; ++var10) {
-                        var9 = var9 + " ";
+                    for (int var10 = 0; var10 < var8; ++var10) {
+                        var9.append(" ");
                     }
 
-                    List var22 = (List)this.econfig.getComments().get(var7);
+                    List var22 = this.econfig.getComments().get(var7);
                     if (var22 != null) {
-                        Iterator var11 = var22.iterator();
 
-                        while(var11.hasNext()) {
-                            String var12 = (String)var11.next();
-                            var20.append(var9).append("# ").append(var12);
+                        for (Object object : var22) {
+                            String var12 = (String) object;
+                            var20.append(var9.toString()).append("# ").append(var12);
                             var20.newLine();
                         }
                     }
@@ -146,29 +132,24 @@ public class SkyConfiguration extends YamlConfiguration implements IConfiguratio
                 if (!var6.startsWith("-") && !var6.startsWith("  -") && !var6.startsWith("    -") && !var6.startsWith("      -")) {
                     var20.append(var6);
                 } else {
-                    var20.append("  " + var6);
+                    var20.append("  ").append(var6);
                 }
 
                 var20.newLine();
                 if (this.econfig.shouldAddNewLinePerKey() && var5 < var2.size() - 1 && !var21) {
-                    var9 = (String)var2.get(var5 + 1);
-                    if (var9 != null && !var9.startsWith(" ") && !var9.startsWith("'") && !var9.startsWith("-")) {
+                    var9 = new StringBuilder((String) var2.get(var5 + 1));
+                    if (var9 != null && !var9.toString().startsWith(" ") && !var9.toString().startsWith("'") && !var9.toString().startsWith("-")) {
                         var20.newLine();
                     }
                 }
             }
-        } finally {
-            if (var20 != null) {
-                var20.close();
-            }
-
         }
 
     }
 
     public void set(String var1, Object var2) {
         if (var2 != null) {
-            if (this.econfig.getComments(var1).size() > 0) {
+            if (!this.econfig.getComments(var1).isEmpty()) {
                 this.econfig.getComments().put(var1, this.econfig.getComments(var1));
             } else {
                 this.econfig.getComments().remove(var1);
@@ -183,16 +164,11 @@ public class SkyConfiguration extends YamlConfiguration implements IConfiguratio
     public void addDefault(String var1, Object var2, String... var3) {
         if (var2 != null && var3 != null && var3.length > 0 && !this.econfig.getComments().containsKey(var1)) {
             ArrayList var4 = new ArrayList();
-            String[] var5 = var3;
             int var6 = var3.length;
 
             for(int var7 = 0; var7 < var6; ++var7) {
-                String var8 = var5[var7];
-                if (var8 != null) {
-                    var4.add(var8);
-                } else {
-                    var4.add("");
-                }
+                String var8 = var3[var7];
+                var4.add(Objects.requireNonNullElse(var8, ""));
             }
 
             this.econfig.getComments().put(var1, var4);
@@ -204,16 +180,11 @@ public class SkyConfiguration extends YamlConfiguration implements IConfiguratio
     public void createSection(String var1, String... var2) {
         if (var1 != null && var2 != null && var2.length > 0) {
             ArrayList var3 = new ArrayList();
-            String[] var4 = var2;
             int var5 = var2.length;
 
             for(int var6 = 0; var6 < var5; ++var6) {
-                String var7 = var4[var6];
-                if (var7 != null) {
-                    var3.add(var7);
-                } else {
-                    var3.add("");
-                }
+                String var7 = var2[var6];
+                var3.add(Objects.requireNonNullElse(var7, ""));
             }
 
             this.econfig.getComments().put(var1, var3);
@@ -223,16 +194,15 @@ public class SkyConfiguration extends YamlConfiguration implements IConfiguratio
     }
 
     public void setHeader(String... var1) {
-        String var2 = "";
-        String[] var3 = var1;
+        StringBuilder var2 = new StringBuilder();
         int var4 = var1.length;
 
         for(int var5 = 0; var5 < var4; ++var5) {
-            String var6 = var3[var5];
-            var2 = var2 + var6 + "\n";
+            String var6 = var1[var5];
+            var2.append(var6).append("\n");
         }
 
-        super.options().header(var2);
+        super.options().header(var2.toString());
     }
 
     public void set(String var1, Object var2, String... var3) {
@@ -240,16 +210,11 @@ public class SkyConfiguration extends YamlConfiguration implements IConfiguratio
             if (var3 != null) {
                 if (var3.length > 0) {
                     ArrayList var4 = new ArrayList();
-                    String[] var5 = var3;
                     int var6 = var3.length;
 
                     for(int var7 = 0; var7 < var6; ++var7) {
-                        String var8 = var5[var7];
-                        if (var8 != null) {
-                            var4.add(var8);
-                        } else {
-                            var4.add("");
-                        }
+                        String var8 = var3[var7];
+                        var4.add(Objects.requireNonNullElse(var8, ""));
                     }
 
                     this.econfig.getComments().put(var1, var4);
